meego-keyboard (0.6.3~1) unstable; urgency=low

  * [UNRELEASED]

 -- Viacheslav Sobolev <ext-viacheslav.sobolev@nokia.com>  Thu, 12 May 2011 10:23:02 +0300

meego-keyboard (0.6.2-1) unstable; urgency=low

  * Fixes: NB#252067 - VKB 'attribute extended' highlighted enabled key seems to have a broken style
  * Fixes: NB#250812 - URL sharing within Browser to Facebook - keyboard has !!Go key instead of carriage return
  * Fixes: NB#252091 - word tracker "tail" is obsolete and should be removed
  * Fixes: NB#253747 - Switch the location of Ä and Ö in finnish VKB
  * Fixes: NB#252284 - Memory corruption in libmeegoreactionmap?
  * Fixes: NB#252078 - keyboard magnifier is not according to layout guide
  * Fixes: NB#252096 - accented keys popup is not according to layout guide

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Wed, 11 May 2011 15:46:16 +0300

meego-keyboard (0.6.1-1) unstable; urgency=low

  * Fixes: NB#237891 - Settings: Call forwarding, characters in virtual numeric pad..
  * Fixes: NB#226852 - With the shift key held down,text entered is shown in..
  * Fixes: NB#244485 - Wrong preedit selected after tapping backspace in a scenario..
  * Fixes: NB#245999 - backspace gets stuck after certain gesture in VKB
  * Fixes: NB#247713 - Keyboard drop shadow is missing
  * Fixes: NB#251619 - Virtual Keyboard open/close transition is off
  * Fixes: NB#236808 - MReactionMap c'tor has to find top level widget itself

 -- Michael Hasselmann <michaelh@openismus.com>  Mon, 02 May 2011 15:48:19 +0200

meego-keyboard (0.6.0-1) unstable; urgency=low

  * Fixes: 251599 - Polish virtual keyboard and the related symbol layout are wrong

 -- Michael Hasselmann <michaelh@openismus.com>  Mon, 02 May 2011 15:39:08 +0200

meego-keyboard (0.5.42-1) unstable; urgency=low

  * Fixes: NB#245545 - The characters in the buttons are shown with different font size
  * Fixes: NB#249527 - Cannot enter character at the place of cursor while adding Skype Account
