@@ -2,7 +2,7 @@ Source: meego-keyboard
 Section: libs
 Priority: extra
 Maintainer: Mohammad Anwari <Mohammad.Anwari@nokia.com> 
-Build-Depends: debhelper (>= 5), libqt4-dev (>= 4.6), doxygen, libmeegoimengine-dev (>= 0.4.1), libmeegoimframework-dev (>= 0.20.6-1), libmeegoimquick-dev, libmeegotouch-dev (>= 0.20), libmeegoreactionmap-dev (>= 0.15.1-1), libxkbfile-dev (>= 1.0.6)
+Build-Depends: debhelper (>= 5), libqt4-dev (>= 4.6), doxygen, libmeegoimengine-dev (>= 0.4.1), libmeegoimframework-dev (>= 0.20.11~1), libmeegoimquick-dev, libmeegotouch-dev (>= 0.20), libmeegoreactionmap-dev (>= 0.15.1-1), libxkbfile-dev (>= 1.0.6)
 Standards-Version: 3.7.2
 
 Package: meego-keyboard
