@@ -1,6 +1,7 @@
 meego-keyboard (0.6.3~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#251341 - Switching to plugin does not happen if there is one language set in MeegoKeyboard.
 
  -- Viacheslav Sobolev <ext-viacheslav.sobolev@nokia.com>  Thu, 12 May 2011 10:23:02 +0300
 
